<resources>
    <string name="app_name">AppFoodPie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_fragment_eat">逛吃</string>
    <string name="rbt_one">食物百科</string>
    <string name="rbt_two">逛吃</string>
    <string name="rbt_three">我的</string>
    <string name="fragment_enc_tv">查询食物信息</string>
    <string name="fragment_enc_btn_search">请输入食物名称</string>
    <string name="fragment_enc_btn_com">搜索对比</string>
    <string name="fragment_enc_btn_scan">扫码对比</string>
    <string name="fragment_enc_tv_food">食物分类</string>
    <string name="fragment_enc_btn_ana">饮食分析</string>
    <string name="fragment_my_tv_myTv">我的</string>
    <string name="fragment_my_btn">点击登录</string>
    <string name="fragment_my_tv_photo">我的照片</string>
    <string name="fragment_my_tv_only">我的收藏</string>
    <string name="fragment_my_tv_updata">上传食物数据</string>
    <string name="fragment_my_tv_order">我的订单</string>
    <string name="login">登录</string>
    <string name="not_in_login">不用注册, 用以下账号直接登录</string>
    <string name="qq">QQ</string>
    <string name="wei_xin">微信</string>
    <string name="wei_bo">微博</string>
    <string name="bo_he">薄荷</string>
    <string name="qianka">千卡/100克</string>
    <string name="qian_ka">千卡/100克</string>
    <string name="q_k_100">千卡/100.0克</string>
    <string name="history">清空历史记录</string>
    <string name="more">资讯详情</string>
    <string name="share">分享</string>
    <string name="colletion">收藏</string>
    <string name="sleep">梦话,睡个好觉,画个好梦</string>
    <string name="more_ys">更多营养元素</string>
    <string name="bei_zhu">备注</string>
    <string name="_100">每100克</string>
    <string name="ssxw">膳食纤维</string>
    <string name="tshhw">碳水化合物</string>
    <string name="fit">脂肪</string>
    <string name="dbz">蛋白质</string>
    <string name="hot">热量</string>
    <string name="yyys">营养元素</string>
    <string name="qk">千卡</string>
    <string name="_100_m">/每100克</string>
    <string name="img_more">图片详情</string>
    <string name="_1">1个月前</string>
    <string name="food_place">请输入食物名称</string>
    <string name="yys_ph">营养素排行</string>
    <string name="pople_all">大家都在搜</string>
    <string name="place_shu_ru">请输入食物名称</string>
    <string name="zui_jin_sou">最近搜过</string>
    <string name="ying_yang">营养素排行</string>
    <string name="all">全部</string>
    <string name="yuan_su">营养元素(毫克)</string>
    <string name="dui_bi_more">对比详情</string>
    <string name="my_shou_cang">我的收藏</string>
</resources>
