<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kevin.appfoodpie.SearchActivity">


    <LinearLayout
        android:id="@+id/fuck"
        android:layout_width="match_parent"
        android:layout_height="@dimen/five_zen"
        android:background="@color/colorWhiteThree"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/search_ret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/five_dp"
            android:background="@null"
            android:src="@mipmap/ic_back_dark_center" />

        <EditText
            android:id="@+id/search_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/place_shu_ru"
            android:textSize="@dimen/tv_tvsize" />

        <ImageButton
            android:id="@+id/library_search_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:src="@mipmap/ic_clear"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/search_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/five_dp"
            android:background="@null"
            android:src="@mipmap/ic_homepage_search" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorDividedLine" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--<LinearLayout-->
            <!--android:id="@+id/library_search_history_ll"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical">-->

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDividedLine" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/four_ten_dp"
                android:layout_marginLeft="@dimen/ten"
                android:gravity="center_vertical"
                android:text="@string/zui_jin_sou"
                android:textSize="@dimen/ten_sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDividedLine" />


            <com.kevin.appfoodpie.values.NoScrollListView
                android:id="@+id/search_history_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--</LinearLayout>-->


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDividedLine" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/four_ten_dp"
                android:layout_marginLeft="@dimen/ten"
                android:gravity="center_vertical"
                android:text="@string/pople_all"
                android:textSize="@dimen/ten_sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDividedLine" />


            <!--用于显示大家都在搜的内容-->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/ten_rvw"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
